Sonar findings - DeploymentManagementTest fix no asert
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>